fixed text overflow in quotes list

--- a/src/components/styles/Quotes.module.scss
+++ b/src/components/styles/Quotes.module.scss
@@ -131,6 +131,7 @@
                 color: #d0d0d0;
                 margin-left: 10px;
                 overflow: hidden;
+                height: fit-content;
             }
         }
     }
